Correct SVG filter issue on Safari

--- a/packages/viewer/src/components/viewer-markup-arrow/viewer-markup-arrow.css
+++ b/packages/viewer/src/components/viewer-markup-arrow/viewer-markup-arrow.css
@@ -90,6 +90,9 @@
 
 .svg {
   pointer-events: none;
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
