--- a/packages/viewer/src/components/viewer-markup-circle/viewer-markup-circle.css
+++ b/packages/viewer/src/components/viewer-markup-circle/viewer-markup-circle.css
@@ -79,6 +79,9 @@
 
 .svg {
   pointer-events: none;
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
